--- a/html/07_robot.html
+++ b/html/07_robot.html
@@ -147,7 +147,7 @@ console.log(object.value);
 
 <p><a class="p_ident" id="p-rdMEL3SZ4l_1" href="#p-rdMEL3SZ4l_1" tabindex="-1" role="presentation"></a>{{index simulación, “mundo virtual”}}</p>
 
-<p><a class="p_ident" id="p-P5MkmbQdHi" href="#p-P5MkmbQdHi" tabindex="-1" role="presentation"></a>Un robot de entrega observa el mundo y decide en qué dirección quiere moverse. Como tal, podríamos decir que un robot es una función que toma un objeto <code>VillageState</code> y devuelve el nombre de un lugar cercano.{{index “función runRobot”}}</p>
+<p><a class="p_ident" id="p-Lt1p8txGDL" href="#p-Lt1p8txGDL" tabindex="-1" role="presentation"></a>Un robot de entrega observa el mundo y decide en qué dirección quiere moverse. Como tal, podríamos decir que un robot es una función que toma un objeto <code>VillageState</code> y devuelve el nombre de un lugar cercano.</p>
 
 <p><a class="p_ident" id="p-pbn2tWD1Al" href="#p-pbn2tWD1Al" tabindex="-1" role="presentation"></a>Dado que queremos que los robots puedan recordar cosas, para que puedan hacer y ejecutar planes, también les pasamos su memoria y les permitimos devolver una nueva memoria. Por lo tanto, lo que un robot devuelve es un objeto que contiene tanto la dirección en la que quiere moverse como un valor de memoria que se le dará la próxima vez que se llame.</p>
 
