fix: insert img 01_values on markdown

--- a/html/01_values.html
+++ b/html/01_values.html
@@ -12,7 +12,7 @@
 
 <h1>Valores, Tipos y Operadores</h1>
 
-<p><a class="p_ident" id="p-CfZ0i1g49l" href="#p-CfZ0i1g49l" tabindex="-1" role="presentation"></a>“Debajo de la superficie de la máquina, el programa se mueve. Sin esfuerzo, se expande y contrae. En gran armonía, los electrones se dispersan y se reagrupan. Las formas en el monitor no son más que ondas en el agua. La esencia permanece invisible debajo.”<br>—Master Yuan-Ma, <em>El Libro de la Programación</em></p>
+<p><a class="p_ident" id="p-CfZ0i1g49l" href="#p-CfZ0i1g49l" tabindex="-1" role="presentation"></a>“Debajo de la superficie de la máquina, el programa se mueve. Sin esfuerzo, se expande y contrae. En gran armonía, los electrones se dispersan y se reagrupan. Las formas en el monitor no son más que ondas en el agua. La esencia permanece invisible debajo.”<br>—Master Yuan-Ma, <em>El Libro de la Programación</em></p><figure class="chapter framed"><img src="img/chapter_picture_1.jpg" alt="Una foto de un mar de bits"></figure>
 
 <p><a class="p_ident" id="p-5q3V1d0pX9" href="#p-5q3V1d0pX9" tabindex="-1" role="presentation"></a>En el mundo de la computadora, solo existe data. Puedes leer data, modificar data, crear nueva data, pero aquello que no es data no puede ser mencionado. Toda esta data se almacena como largas secuencias de bits y, por lo tanto, es fundamentalmente similar.</p>
 
