--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -24,21 +24,15 @@
 
 <h2><a class="h_ident" id="h-oqfl+ptPGG" href="#h-oqfl+ptPGG" tabindex="-1" role="presentation"></a>Expresiones y declaraciones</h2>
 
-<p><a class="p_ident" id="p-gDMlPM3ttt" href="#p-gDMlPM3ttt" tabindex="-1" role="presentation"></a>{{index grammar, [sintaxis, expresión], [código, “estructura de”], gramática, [JavaScript, sintaxis]}}</p>
+<p><a class="p_ident" id="p-gDMlPM3ttt" href="#p-gDMlPM3ttt" tabindex="-1" role="presentation"></a>{{index grammar, [sintaxis, “expresión”], [código, “estructura de”], “gramática”, [JavaScript, sintaxis]}}</p>
 
 <p><a class="p_ident" id="p-Te9W0P2dd7" href="#p-Te9W0P2dd7" tabindex="-1" role="presentation"></a>En <a href="valores">Capítulo ?</a>, creamos valores y aplicamos operadores a ellos para obtener nuevos valores. Crear valores de esta manera es la sustancia principal de cualquier programa JavaScript. Pero esa sustancia debe enmarcarse en una estructura más grande para ser útil. Eso es lo que cubriremos en este capítulo.</p>
-
-<p><a class="p_ident" id="p-rUfLpK+Nem" href="#p-rUfLpK+Nem" tabindex="-1" role="presentation"></a>{{index “expresión literal”, [paréntesis, expresión]}}</p>
 
 <p><a class="p_ident" id="p-3x4YDXd58+" href="#p-3x4YDXd58+" tabindex="-1" role="presentation"></a>Un fragmento de código que produce un valor se llama una <em>expresión</em>. Cada valor que está escrito literalmente (como <code>22</code> o <code>&quot;psicoanálisis&quot;</code>) es una expresión. Una expresión entre paréntesis también es una expresión, al igual que un operador binario aplicado a dos expresiones o un operador unario aplicado a uno.</p>
 
 <p><a class="p_ident" id="p-UqOwwtmeFY" href="#p-UqOwwtmeFY" tabindex="-1" role="presentation"></a>Esto muestra parte de la belleza de una interfaz basada en lenguaje. Las expresiones pueden contener otras expresiones de manera similar a cómo las subsentencias en los idiomas humanos están anidadas: una subsentencia puede contener sus propias subsentencias, y así sucesivamente. Esto nos permite construir expresiones que describen cálculos arbitrariamente complejos.</p>
 
-<p><a class="p_ident" id="p-R9mrjtAked" href="#p-R9mrjtAked" tabindex="-1" role="presentation"></a>{{index declaración, punto y coma, programa}}</p>
-
 <p><a class="p_ident" id="p-ZVBoR+/oNP" href="#p-ZVBoR+/oNP" tabindex="-1" role="presentation"></a>Si una expresión corresponde a un fragmento de oración, una <em>declaración</em> de JavaScript corresponde a una oración completa. Un programa es una lista de declaraciones.</p>
-
-<p><a class="p_ident" id="p-DU6XvYuhHz" href="#p-DU6XvYuhHz" tabindex="-1" role="presentation"></a>{{index [sintaxis, declaración]}}</p>
 
 <p><a class="p_ident" id="p-VEI0X64AX2" href="#p-VEI0X64AX2" tabindex="-1" role="presentation"></a>El tipo más simple de declaración es una expresión con un punto y coma al final. Este es un programa:</p>
 
@@ -120,13 +114,11 @@ switch this throw true try typeof var void while with yield</pre>
 
 <h2><a class="h_ident" id="h-H0l5He7QIh" href="#h-H0l5He7QIh" tabindex="-1" role="presentation"></a>Funciones</h2>
 
-<p><a class="p_ident" id="p-c32ZhUv517" href="#p-c32ZhUv517" tabindex="-1" role="presentation"></a>{{indexsee “aplicación (de funciones)”, [función, aplicación]}} {{indexsee “invocación (de funciones)”, [función, aplicación]}} {{indexsee “llamado (de funciones)”, [función, aplicación]}} {{index salida, función, [función, aplicación], [navegador, entorno]}}</p>
-
 <p><a class="p_ident" id="p-Ic41DcsHv8" href="#p-Ic41DcsHv8" tabindex="-1" role="presentation"></a>Muchos de los valores proporcionados en el entorno predeterminado tienen el tipo de <em>función</em>. Una función es un fragmento de programa envuelto en un valor. Estos valores pueden ser <em>aplicados</em> para ejecutar el programa envuelto. Por ejemplo, en un entorno de navegador, el enlace <code>prompt</code> contiene una función que muestra un pequeño cuadro de diálogo pidiendo la entrada del usuario. Se utiliza de la siguiente manera:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-bHK8mBbYwR" href="#c-bHK8mBbYwR" tabindex="-1" role="presentation"></a>prompt(<span class="tok-string">&quot;Ingrese el código de acceso&quot;</span>);</pre><figure><img src="img/prompt.png" alt="Un cuadro de diálogo que dice 'ingrese el código de acceso'"></figure>
 
-<p><a class="p_ident" id="p-Y+7LpvzMiV" href="#p-Y+7LpvzMiV" tabindex="-1" role="presentation"></a>{{index parámetro, [función, aplicación], [paréntesis, argumentos]}}</p>
+<p><a class="p_ident" id="p-Y+7LpvzMiV" href="#p-Y+7LpvzMiV" tabindex="-1" role="presentation"></a>{{index parámetro, [“función”, “aplicación”], [“paréntesis”, argumentos]}}</p>
 
 <p><a class="p_ident" id="p-ndYtFXmH+W" href="#p-ndYtFXmH+W" tabindex="-1" role="presentation"></a>Ejecutar una función se llama <em>invocar</em>, <em>llamar</em>, o <em>aplicar</em> la función. Puedes llamar una función poniendo paréntesis después de una expresión que produce un valor de función. Usualmente usarás directamente el nombre del enlace que contiene la función. Los valores entre paréntesis se le pasan al programa dentro de la función. En el ejemplo, la función <code>prompt</code> utiliza la cadena que le pasamos como el texto a mostrar en el cuadro de diálogo. Los valores dados a las funciones se llaman <em>argumentos</em>. Diferentes funciones pueden necesitar un número diferente o diferentes tipos de argumentos.</p>
 
@@ -152,8 +144,6 @@ console.log(<span class="tok-string">&quot;el valor de x es&quot;</span>, x);
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-PEuTYZX6NI" href="#c-PEuTYZX6NI" tabindex="-1" role="presentation"></a>console.log(Math.max(<span class="tok-number">2</span>, <span class="tok-number">4</span>));
 <span class="tok-comment">// → 4</span></pre>
-
-<p><a class="p_ident" id="p-QBFwwwgqRr" href="#p-QBFwwwgqRr" tabindex="-1" role="presentation"></a>{{index [función, aplicación], mínimo, función “Math.min”}}</p>
 
 <p><a class="p_ident" id="p-F6xnVn91xR" href="#p-F6xnVn91xR" tabindex="-1" role="presentation"></a>Cuando una función produce un valor, se dice que <em>retorna</em> ese valor. Cualquier cosa que produzca un valor es una expresión en JavaScript, lo que significa que las llamadas a funciones se pueden utilizar dentro de expresiones más grandes. En el siguiente código, una llamada a <code>Math.min</code>, que es lo opuesto a <code>Math.max</code>, se usa como parte de una expresión de suma:</p>
 
