--- a/html/01_values.html
+++ b/html/01_values.html
@@ -35,8 +35,6 @@
 
 <h2><a class="h_ident" id="h-2eDSr4FTTr" href="#h-2eDSr4FTTr" tabindex="-1" role="presentation"></a>Números</h2>
 
-<p><a class="p_ident" id="p-FxC0bT4JSN" href="#p-FxC0bT4JSN" tabindex="-1" role="presentation"></a>{{index [sintaxis, “número”], “número”, [“número”, notación]}}</p>
-
 <p><a class="p_ident" id="p-bOZDjE7yem" href="#p-bOZDjE7yem" tabindex="-1" role="presentation"></a>Los valores del tipo <em>number</em> son, como era de esperar, valores numéricos. En un programa de JavaScript, se escriben de la siguiente manera:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-/u5ErTZbax" href="#c-/u5ErTZbax" tabindex="-1" role="presentation"></a><span class="tok-number">13</span></pre>
@@ -63,7 +61,9 @@
 
 <h3><a class="i_ident" id="i-aIf95z3S0d" href="#i-aIf95z3S0d" tabindex="-1" role="presentation"></a>Aritmética</h3>
 
-<p><a class="p_ident" id="p-vluVEv5S+N" href="#p-vluVEv5S+N" tabindex="-1" role="presentation"></a>{{index [sintaxis, operador], operador, “operador binario”, aritmética, suma, multiplicación}}Lo principal que se puede hacer con los números es la aritmética. Operaciones aritméticas como la suma o la multiplicación toman dos valores numéricos y producen un nuevo número a partir de ellos. Así es como se ven en JavaScript:</p>
+<p><a class="p_ident" id="p-tuQfTpUGDu" href="#p-tuQfTpUGDu" tabindex="-1" role="presentation"></a>{{index [sintaxis, operador], operador, “operador binario”, aritmética, suma, multiplicación}}</p>
+
+<p><a class="p_ident" id="p-fEl5oInJjs" href="#p-fEl5oInJjs" tabindex="-1" role="presentation"></a>Lo principal que se puede hacer con los números es la aritmética. Operaciones aritméticas como la suma o la multiplicación toman dos valores numéricos y producen un nuevo número a partir de ellos. Así es como se ven en JavaScript:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript"  data-meta="expr"><a class="c_ident" id="c-bSU4Vtv/mt" href="#c-bSU4Vtv/mt" tabindex="-1" role="presentation"></a><span class="tok-number">100</span> + <span class="tok-number">4</span> * <span class="tok-number">11</span></pre>
 
@@ -72,8 +72,6 @@
 <p><a class="p_ident" id="p-rbQOL3GnYq" href="#p-rbQOL3GnYq" tabindex="-1" role="presentation"></a>¿Significa este ejemplo “Sumar 4 y 100, y luego multiplicar el resultado por 11”, o se realiza primero la multiplicación antes de la suma? Como habrás adivinado, la multiplicación se realiza primero. Como en matemáticas, puedes cambiar esto envolviendo la suma entre paréntesis:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript"  data-meta="expr"><a class="c_ident" id="c-ij6V90ZZBQ" href="#c-ij6V90ZZBQ" tabindex="-1" role="presentation"></a>(<span class="tok-number">100</span> + <span class="tok-number">4</span>) * <span class="tok-number">11</span></pre>
-
-<p><a class="p_ident" id="p-45wrVTMWju" href="#p-45wrVTMWju" tabindex="-1" role="presentation"></a>{{index “carácter de resta”, “carácter de división”, división, resta, &quot;-&quot;, &quot;/ operator”}}</p>
 
 <p><a class="p_ident" id="p-e9lhSXZbdW" href="#p-e9lhSXZbdW" tabindex="-1" role="presentation"></a>Para la resta, está el operador <code>-</code>. La división se puede hacer con el operador <code>/</code>.</p>
 
@@ -90,8 +88,6 @@
 <p><a class="p_ident" id="p-FTEAETPV0R" href="#p-FTEAETPV0R" tabindex="-1" role="presentation"></a><code>NaN</code> significa “no es un número”, aunque <em>es</em> un valor del tipo numérico. Obtendrás este resultado cuando, por ejemplo, intentes calcular <code>0 / 0</code> (cero dividido por cero), <code>Infinity - Infinity</code>, u cualquier otra operación numérica que no produzca un resultado significativo.</p>
 
 <h2><a class="h_ident" id="h-J4o1MED4vw" href="#h-J4o1MED4vw" tabindex="-1" role="presentation"></a>Cadenas</h2>
-
-<p><a class="p_ident" id="p-Dz5CZXBxxz" href="#p-Dz5CZXBxxz" tabindex="-1" role="presentation"></a>{{index [sintaxis, cadena], texto, “carácter”, [cadena, notación], “comilla simple”, “comilla doble”, comillas, comilla invertida}}</p>
 
 <p><a class="p_ident" id="p-LSngdQYH80" href="#p-LSngdQYH80" tabindex="-1" role="presentation"></a>El siguiente tipo de dato básico es la <em>cadena</em>. Las cadenas se utilizan para representar texto. Se escriben encerrando su contenido entre comillas.</p>
 
